[gd_scene load_steps=15 format=2]

[ext_resource path="res://scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://assets/Titillium-Regular.otf" type="DynamicFontData" id=4]
[ext_resource path="res://default_env.tres" type="Environment" id=5]
[ext_resource path="res://assets/room_4_spatialmaterial.tres" type="Material" id=14]
[ext_resource path="res://scripts/PreviewPlayer.gd" type="Script" id=15]
[ext_resource path="res://assets/room_2_spatialmaterial.tres" type="Material" id=16]
[ext_resource path="res://assets/room_1_spatialmaterial.tres" type="Material" id=17]
[ext_resource path="res://assets/room_3_spatialmaterial.tres" type="Material" id=18]

[sub_resource type="CapsuleShape" id=1]
radius = 1.2
height = 9.0

[sub_resource type="DynamicFont" id=2]
size = 42
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="PlaneMesh" id=3]
size = Vector2( 80, 80 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 40, 0.1, 40 )

[sub_resource type="SphereMesh" id=5]
radius = 3.0
height = 6.0

[sub_resource type="SpatialMaterial" id=6]
flags_unshaded = true

[node name="Root" type="Spatial"]

[node name="Player" type="KinematicBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.967471, 9.83314, 1.12206 )
input_capture_on_drag = true
script = ExtResource( 2 )

[node name="Body_CollisionShape" type="CollisionShape" parent="Player"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0.3, 0 )
shape = SubResource( 1 )

[node name="Rotation_Helper" type="Spatial" parent="Player"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.7, 0 )

[node name="Camera" type="Camera" parent="Player/Rotation_Helper"]
transform = Transform( -1, 0, 3.25841e-07, 0, 1, 0, -3.25841e-07, 0, -1, 0, 0, 0 )
current = true
fov = 90.0
far = 180.0

[node name="HUD" type="Control" parent="Player"]
margin_top = 3.5636
margin_bottom = 3.5636
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Room_label" type="Label" parent="Player/HUD"]
margin_left = 10.0
margin_top = 20.0
margin_right = 380.0
margin_bottom = 109.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Room: 
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Preview_label" type="Label" parent="Player/HUD"]
margin_left = 7.0
margin_top = 64.0
margin_right = 381.0
margin_bottom = 153.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Preview: 
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cant_swap_label" type="Label" parent="Player/HUD"]
visible = false
margin_left = 262.558
margin_top = 67.2304
margin_right = 632.558
margin_bottom = 156.23
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "You can't swap there
"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewportContainer" type="ViewportContainer" parent="Player/HUD"]
margin_right = 300.0
margin_bottom = 200.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Viewport" type="Viewport" parent="Player/HUD/ViewportContainer"]
size = Vector2( 300, 200 )
handle_input_locally = false
render_direct_to_screen = true
render_target_update_mode = 3

[node name="Camera2" type="Camera" parent="Player/HUD/ViewportContainer/Viewport"]
transform = Transform( -1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1, -0.967, 14.533, 1.122 )
current = true
fov = 90.0
far = 180.0

[node name="PreviewPlayer" type="KinematicBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.967, 9.833, 1.122 )
script = ExtResource( 15 )

[node name="Rotation_Helper" type="Spatial" parent="PreviewPlayer"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.7, 0 )

[node name="RemoteTransform" type="RemoteTransform" parent="PreviewPlayer/Rotation_Helper"]
transform = Transform( -1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1, 0, 0, 0 )
remote_path = NodePath("../../../Player/HUD/ViewportContainer/Viewport/Camera2")

[node name="Area" type="Area" parent="PreviewPlayer"]
input_ray_pickable = false
gravity_vec = Vector3( 0, 0, 0 )
gravity = 0.0
linear_damp = 0.0
angular_damp = 0.0

[node name="Body_CollisionShape2" type="CollisionShape" parent="PreviewPlayer/Area"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0.3, 0 )
shape = SubResource( 1 )

[node name="Room 1" type="Spatial" parent="."]

[node name="Platform_1" type="CSGBox" parent="Room 1"]
transform = Transform( -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0, 1, 36.548, 15.9975, -0.520769 )
material_override = ExtResource( 17 )
use_collision = true
width = 0.1
height = 17.4014
depth = 84.8099

[node name="Box" type="Spatial" parent="Room 1"]

[node name="Floor_plane" type="MeshInstance" parent="Room 1/Box"]
mesh = SubResource( 3 )
material/0 = ExtResource( 17 )

[node name="StaticBody" type="StaticBody" parent="Room 1/Box/Floor_plane"]

[node name="CollisionShape" type="CollisionShape" parent="Room 1/Box/Floor_plane/StaticBody"]
shape = SubResource( 4 )

[node name="Celing_plane" type="MeshInstance" parent="Room 1/Box"]
transform = Transform( 1, 0, 0, 0, -1, 3.25841e-07, 0, -3.25841e-07, -1, 0, 75.2188, 0 )
cast_shadow = 2
mesh = SubResource( 3 )
material/0 = ExtResource( 17 )

[node name="StaticBody" type="StaticBody" parent="Room 1/Box/Celing_plane"]

[node name="CollisionShape" type="CollisionShape" parent="Room 1/Box/Celing_plane/StaticBody"]
shape = SubResource( 4 )

[node name="Wall_1" type="MeshInstance" parent="Room 1/Box"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, -0.640566, 37.0752, 39.6568 )
cast_shadow = 2
mesh = SubResource( 3 )
material/0 = ExtResource( 17 )

[node name="StaticBody" type="StaticBody" parent="Room 1/Box/Wall_1"]

[node name="CollisionShape" type="CollisionShape" parent="Room 1/Box/Wall_1/StaticBody"]
shape = SubResource( 4 )

[node name="Wall_2" type="MeshInstance" parent="Room 1/Box"]
transform = Transform( -1.62921e-07, -1, 0.000345306, 0, 0.000345306, 1, -1, 1.62921e-07, -5.62574e-11, 38.2511, 37.0752, 0.0846462 )
cast_shadow = 2
mesh = SubResource( 3 )
material/0 = ExtResource( 17 )

[node name="StaticBody" type="StaticBody" parent="Room 1/Box/Wall_2"]

[node name="CollisionShape" type="CollisionShape" parent="Room 1/Box/Wall_2/StaticBody"]
shape = SubResource( 4 )

[node name="Wall_3" type="MeshInstance" parent="Room 1/Box"]
transform = Transform( -1.62921e-07, 1, -0.000488118, 0, 0.000488118, 1, 1, 1.62921e-07, -7.95246e-11, -40.2198, 37.0752, 0.0846462 )
cast_shadow = 2
mesh = SubResource( 3 )
material/0 = ExtResource( 17 )

[node name="StaticBody" type="StaticBody" parent="Room 1/Box/Wall_3"]

[node name="CollisionShape" type="CollisionShape" parent="Room 1/Box/Wall_3/StaticBody"]
shape = SubResource( 4 )

[node name="Wall_4" type="MeshInstance" parent="Room 1/Box"]
transform = Transform( -1, 3.25841e-07, 5.30863e-14, 0, -1.62921e-07, 1, 3.25841e-07, 1, 1.62921e-07, -0.569376, 37.0752, -37.7189 )
cast_shadow = 2
mesh = SubResource( 3 )
material/0 = ExtResource( 17 )

[node name="StaticBody" type="StaticBody" parent="Room 1/Box/Wall_4"]

[node name="CollisionShape" type="CollisionShape" parent="Room 1/Box/Wall_4/StaticBody"]
shape = SubResource( 4 )

[node name="OmniLight" type="OmniLight" parent="Room 1/Box"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 42.005, 0 )
shadow_enabled = true
shadow_bias = 0.4
omni_range = 60.0

[node name="MeshInstance" type="MeshInstance" parent="Room 1/Box/OmniLight"]
cast_shadow = 0
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="Starting_Cage" type="Spatial" parent="Room 1"]

[node name="Wall_1" type="CSGBox" parent="Room 1/Starting_Cage"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 10, 0 )
material_override = ExtResource( 17 )
use_collision = true
width = 0.1
height = 20.0
depth = 10.0

[node name="Wall_2" type="CSGBox" parent="Room 1/Starting_Cage"]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, 0, 10, 5 )
material_override = ExtResource( 17 )
use_collision = true
width = 0.1
height = 20.0
depth = 10.0

[node name="Wall_3" type="CSGBox" parent="Room 1/Starting_Cage"]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, 0, 10, -5 )
material_override = ExtResource( 17 )
use_collision = true
width = 0.1
height = 20.0
depth = 10.0

[node name="Wall_4" type="Spatial" parent="Room 1/Starting_Cage"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -25, 10, 0 )

[node name="Outside_Faces" type="CSGBox" parent="Room 1/Starting_Cage/Wall_4"]
material_override = ExtResource( 17 )
use_collision = true
width = 40.0
height = 20.0
depth = 10.0

[node name="Inside_Faces" type="CSGBox" parent="Room 1/Starting_Cage/Wall_4"]
material_override = ExtResource( 17 )
use_collision = true
invert_faces = true
width = 40.0
height = 20.0
depth = 10.0

[node name="Inside_Plane" type="CSGBox" parent="Room 1/Starting_Cage/Wall_4"]
use_collision = true
width = 40.0
height = 0.1
depth = 10.0
material = ExtResource( 17 )

[node name="Room 2" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 100, 0, 0 )

[node name="Platform_1" type="CSGBox" parent="Room 2"]
transform = Transform( -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0, 1, -2.01647, 29.2743, -33.1635 )
use_collision = true
width = 0.1
height = 80.3401
depth = 10.0
material = ExtResource( 16 )

[node name="Box" type="Spatial" parent="Room 2"]

[node name="Floor_plane" type="MeshInstance" parent="Room 2/Box"]
mesh = SubResource( 3 )
material/0 = ExtResource( 16 )

[node name="StaticBody" type="StaticBody" parent="Room 2/Box/Floor_plane"]

[node name="CollisionShape" type="CollisionShape" parent="Room 2/Box/Floor_plane/StaticBody"]
shape = SubResource( 4 )

[node name="Celing_plane" type="MeshInstance" parent="Room 2/Box"]
transform = Transform( 1, 0, 0, 0, -1, 3.25841e-07, 0, -3.25841e-07, -1, 0, 75.2188, 0 )
cast_shadow = 2
mesh = SubResource( 3 )
material/0 = ExtResource( 16 )

[node name="StaticBody" type="StaticBody" parent="Room 2/Box/Celing_plane"]

[node name="CollisionShape" type="CollisionShape" parent="Room 2/Box/Celing_plane/StaticBody"]
shape = SubResource( 4 )

[node name="Wall_1" type="MeshInstance" parent="Room 2/Box"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, -0.640566, 37.0752, 39.6568 )
cast_shadow = 2
mesh = SubResource( 3 )
material/0 = ExtResource( 16 )

[node name="StaticBody" type="StaticBody" parent="Room 2/Box/Wall_1"]

[node name="CollisionShape" type="CollisionShape" parent="Room 2/Box/Wall_1/StaticBody"]
shape = SubResource( 4 )

[node name="Wall_2" type="MeshInstance" parent="Room 2/Box"]
transform = Transform( -1.62921e-07, -1, 0.000345306, 0, 0.000345306, 1, -1, 1.62921e-07, -5.62574e-11, 38.2511, 37.0752, 0.0846462 )
cast_shadow = 2
mesh = SubResource( 3 )
material/0 = ExtResource( 16 )

[node name="StaticBody" type="StaticBody" parent="Room 2/Box/Wall_2"]

[node name="CollisionShape" type="CollisionShape" parent="Room 2/Box/Wall_2/StaticBody"]
shape = SubResource( 4 )

[node name="Wall_3" type="MeshInstance" parent="Room 2/Box"]
transform = Transform( -1.62921e-07, 1, -0.000488118, 0, 0.000488118, 1, 1, 1.62921e-07, -7.95246e-11, -40.2198, 37.0752, 0.0846462 )
cast_shadow = 2
mesh = SubResource( 3 )
material/0 = ExtResource( 16 )

[node name="StaticBody" type="StaticBody" parent="Room 2/Box/Wall_3"]

[node name="CollisionShape" type="CollisionShape" parent="Room 2/Box/Wall_3/StaticBody"]
shape = SubResource( 4 )

[node name="Wall_4" type="MeshInstance" parent="Room 2/Box"]
transform = Transform( -1, 3.25841e-07, 5.30863e-14, 0, -1.62921e-07, 1, 3.25841e-07, 1, 1.62921e-07, -0.569374, 37.0752, -37.7189 )
cast_shadow = 2
mesh = SubResource( 3 )
material/0 = ExtResource( 16 )

[node name="StaticBody" type="StaticBody" parent="Room 2/Box/Wall_4"]

[node name="CollisionShape" type="CollisionShape" parent="Room 2/Box/Wall_4/StaticBody"]
shape = SubResource( 4 )

[node name="OmniLight" type="OmniLight" parent="Room 2/Box"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 42.005, 0 )
shadow_enabled = true
shadow_bias = 0.4
omni_range = 60.0

[node name="MeshInstance" type="MeshInstance" parent="Room 2/Box/OmniLight"]
cast_shadow = 0
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="Starting_Cage2" type="Spatial" parent="Room 2"]

[node name="Wall_1" type="CSGBox" parent="Room 2/Starting_Cage2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 10, 0 )
use_collision = true
width = 0.1
height = 20.0
depth = 10.0
material = ExtResource( 16 )

[node name="Wall_2" type="CSGBox" parent="Room 2/Starting_Cage2"]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, 0, 10, 5 )
use_collision = true
width = 0.1
height = 20.0
depth = 10.0
material = ExtResource( 16 )

[node name="Wall_3" type="CSGBox" parent="Room 2/Starting_Cage2"]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, 0, 10, -5 )
use_collision = true
width = 0.1
height = 20.0
depth = 10.0
material = ExtResource( 16 )

[node name="Wall_4" type="Spatial" parent="Room 2/Starting_Cage2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -17.5, 10, 0 )

[node name="Outside_Faces" type="CSGBox" parent="Room 2/Starting_Cage2/Wall_4"]
calculate_tangents = false
use_collision = true
width = 25.0
height = 20.0
depth = 10.0
material = ExtResource( 16 )

[node name="Inside_Faces" type="CSGBox" parent="Room 2/Starting_Cage2/Wall_4"]
calculate_tangents = false
use_collision = true
invert_faces = true
width = 25.0
height = 20.0
depth = 10.0
material = ExtResource( 16 )

[node name="Inside_Plane" type="CSGBox" parent="Room 2/Starting_Cage2/Wall_4"]
use_collision = true
width = 25.0
height = 0.1
depth = 10.0
material = ExtResource( 16 )

[node name="Room 3" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 200, 0, 0 )

[node name="Ramp_1" type="CSGBox" parent="Room 3"]
transform = Transform( -0.5, 0.866025, 3.25841e-07, 0.866025, 0.5, 0, -1.62921e-07, 2.82187e-07, -1, 10, 6.096, 34.6552 )
use_collision = true
width = 0.1
height = 40.0
depth = 10.0
material = ExtResource( 18 )

[node name="Ramp_2" type="CSGBox" parent="Room 3"]
transform = Transform( -8.14603e-08, 1.41093e-07, 1, 0.866025, 0.5, 0, -0.5, 0.866025, -1.62921e-07, -35.2101, 40.3702, -13.2244 )
use_collision = true
width = 0.1
height = 40.0
depth = 10.0
material = ExtResource( 18 )

[node name="Box" type="Spatial" parent="Room 3"]

[node name="Floor_plane" type="MeshInstance" parent="Room 3/Box"]
mesh = SubResource( 3 )
material/0 = ExtResource( 18 )

[node name="StaticBody" type="StaticBody" parent="Room 3/Box/Floor_plane"]

[node name="CollisionShape" type="CollisionShape" parent="Room 3/Box/Floor_plane/StaticBody"]
shape = SubResource( 4 )

[node name="Celing_plane" type="MeshInstance" parent="Room 3/Box"]
transform = Transform( 1, 0, 0, 0, -1, 3.25841e-07, 0, -3.25841e-07, -1, 0, 75.2188, 0 )
cast_shadow = 2
mesh = SubResource( 3 )
material/0 = ExtResource( 18 )

[node name="StaticBody" type="StaticBody" parent="Room 3/Box/Celing_plane"]

[node name="CollisionShape" type="CollisionShape" parent="Room 3/Box/Celing_plane/StaticBody"]
shape = SubResource( 4 )

[node name="Wall_1" type="MeshInstance" parent="Room 3/Box"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, -0.640566, 37.0752, 39.6568 )
cast_shadow = 2
mesh = SubResource( 3 )
material/0 = ExtResource( 18 )

[node name="StaticBody" type="StaticBody" parent="Room 3/Box/Wall_1"]

[node name="CollisionShape" type="CollisionShape" parent="Room 3/Box/Wall_1/StaticBody"]
shape = SubResource( 4 )

[node name="Wall_2" type="MeshInstance" parent="Room 3/Box"]
transform = Transform( -1.62921e-07, -1, 0.000345306, 0, 0.000345306, 1, -1, 1.62921e-07, -5.62574e-11, 38.2511, 37.0752, 0.0846462 )
cast_shadow = 2
mesh = SubResource( 3 )
material/0 = ExtResource( 18 )

[node name="StaticBody" type="StaticBody" parent="Room 3/Box/Wall_2"]

[node name="CollisionShape" type="CollisionShape" parent="Room 3/Box/Wall_2/StaticBody"]
shape = SubResource( 4 )

[node name="Wall_3" type="MeshInstance" parent="Room 3/Box"]
transform = Transform( -1.62921e-07, 1, -0.000488118, 0, 0.000488118, 1, 1, 1.62921e-07, -7.95246e-11, -40.2198, 37.0752, 0.0846462 )
cast_shadow = 2
mesh = SubResource( 3 )
material/0 = ExtResource( 18 )

[node name="StaticBody" type="StaticBody" parent="Room 3/Box/Wall_3"]

[node name="CollisionShape" type="CollisionShape" parent="Room 3/Box/Wall_3/StaticBody"]
shape = SubResource( 4 )

[node name="Wall_4" type="MeshInstance" parent="Room 3/Box"]
transform = Transform( -1, 3.25841e-07, 5.30863e-14, 0, -1.62921e-07, 1, 3.25841e-07, 1, 1.62921e-07, -0.569376, 37.0752, -37.7189 )
cast_shadow = 2
mesh = SubResource( 3 )
material/0 = ExtResource( 18 )

[node name="StaticBody" type="StaticBody" parent="Room 3/Box/Wall_4"]

[node name="CollisionShape" type="CollisionShape" parent="Room 3/Box/Wall_4/StaticBody"]
shape = SubResource( 4 )

[node name="OmniLight" type="OmniLight" parent="Room 3/Box"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 42.005, 0 )
shadow_enabled = true
shadow_bias = 0.4
omni_range = 60.0

[node name="MeshInstance" type="MeshInstance" parent="Room 3/Box/OmniLight"]
cast_shadow = 0
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="Starting_Cage3" type="Spatial" parent="Room 3"]

[node name="Wall_1" type="CSGBox" parent="Room 3/Starting_Cage3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 10, 0 )
use_collision = true
width = 0.1
height = 20.0
depth = 10.0
material = ExtResource( 18 )

[node name="Wall_2" type="CSGBox" parent="Room 3/Starting_Cage3"]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, 0, 10, 5 )
use_collision = true
width = 0.1
height = 20.0
depth = 10.0
material = ExtResource( 18 )

[node name="Wall_3" type="CSGBox" parent="Room 3/Starting_Cage3"]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, 0, 10, -5 )
use_collision = true
width = 0.1
height = 20.0
depth = 10.0
material = ExtResource( 18 )

[node name="Wall_4" type="Spatial" parent="Room 3/Starting_Cage3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -25, 10, 0 )

[node name="Outside_Faces" type="CSGBox" parent="Room 3/Starting_Cage3/Wall_4"]
use_collision = true
width = 40.0
height = 20.0
depth = 10.0
material = ExtResource( 18 )

[node name="Inside_Faces" type="CSGBox" parent="Room 3/Starting_Cage3/Wall_4"]
use_collision = true
invert_faces = true
width = 40.0
height = 20.0
depth = 10.0
material = ExtResource( 18 )

[node name="Inside_Plane" type="CSGBox" parent="Room 3/Starting_Cage3/Wall_4"]
use_collision = true
width = 40.0
height = 0.1
depth = 10.0
material = ExtResource( 18 )

[node name="Room 4" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 300, 0, 0 )

[node name="Ramp_1" type="CSGBox" parent="Room 4"]
transform = Transform( -1.15202e-07, -1.15202e-07, 1, -0.818471, 0.574548, -2.81004e-08, -0.574548, -0.818471, -1.60479e-07, 33.3749, 22.7221, -20.1572 )
use_collision = true
width = 0.1
height = 24.535
depth = 10.0
material = ExtResource( 14 )

[node name="Box" type="Spatial" parent="Room 4"]

[node name="Floor_plane" type="MeshInstance" parent="Room 4/Box"]
mesh = SubResource( 3 )
material/0 = ExtResource( 14 )

[node name="StaticBody" type="StaticBody" parent="Room 4/Box/Floor_plane"]

[node name="CollisionShape" type="CollisionShape" parent="Room 4/Box/Floor_plane/StaticBody"]
shape = SubResource( 4 )

[node name="Celing_plane" type="MeshInstance" parent="Room 4/Box"]
transform = Transform( 1, 0, 0, 0, -1, 3.25841e-07, 0, -3.25841e-07, -1, 0, 75.2188, 0 )
cast_shadow = 2
mesh = SubResource( 3 )
material/0 = ExtResource( 14 )

[node name="StaticBody" type="StaticBody" parent="Room 4/Box/Celing_plane"]

[node name="CollisionShape" type="CollisionShape" parent="Room 4/Box/Celing_plane/StaticBody"]
shape = SubResource( 4 )

[node name="Wall_1" type="MeshInstance" parent="Room 4/Box"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, -0.640566, 37.0752, 39.6568 )
cast_shadow = 2
mesh = SubResource( 3 )
material/0 = ExtResource( 14 )

[node name="StaticBody" type="StaticBody" parent="Room 4/Box/Wall_1"]

[node name="CollisionShape" type="CollisionShape" parent="Room 4/Box/Wall_1/StaticBody"]
shape = SubResource( 4 )

[node name="Wall_2" type="MeshInstance" parent="Room 4/Box"]
transform = Transform( -1.62921e-07, -1, 0.000345306, 0, 0.000345306, 1, -1, 1.62921e-07, -5.62574e-11, 38.2794, 37.0752, 1.93033 )
cast_shadow = 2
mesh = SubResource( 3 )
material/0 = ExtResource( 14 )

[node name="StaticBody" type="StaticBody" parent="Room 4/Box/Wall_2"]

[node name="CollisionShape" type="CollisionShape" parent="Room 4/Box/Wall_2/StaticBody"]
shape = SubResource( 4 )

[node name="Wall_3" type="MeshInstance" parent="Room 4/Box"]
transform = Transform( -1.62921e-07, 1, -0.000488118, 0, 0.000488118, 1, 1, 1.62921e-07, -7.95246e-11, -40.2198, 37.0752, 0.0846462 )
cast_shadow = 2
mesh = SubResource( 3 )
material/0 = ExtResource( 14 )

[node name="StaticBody" type="StaticBody" parent="Room 4/Box/Wall_3"]

[node name="CollisionShape" type="CollisionShape" parent="Room 4/Box/Wall_3/StaticBody"]
shape = SubResource( 4 )

[node name="Wall_4" type="MeshInstance" parent="Room 4/Box"]
transform = Transform( -1, 3.25841e-07, 5.30863e-14, 0, -1.62921e-07, 1, 3.25841e-07, 1, 1.62921e-07, -0.569, 37.075, -37.719 )
cast_shadow = 2
mesh = SubResource( 3 )
material/0 = ExtResource( 14 )

[node name="StaticBody" type="StaticBody" parent="Room 4/Box/Wall_4"]

[node name="CollisionShape" type="CollisionShape" parent="Room 4/Box/Wall_4/StaticBody"]
shape = SubResource( 4 )

[node name="OmniLight" type="OmniLight" parent="Room 4/Box"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 42.005, 0 )
shadow_enabled = true
shadow_bias = 0.4
omni_range = 60.0

[node name="MeshInstance" type="MeshInstance" parent="Room 4/Box/OmniLight"]
cast_shadow = 0
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="Starting_Cage4" type="Spatial" parent="Room 4"]

[node name="Wall_1" type="CSGBox" parent="Room 4/Starting_Cage4"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 10, 0 )
use_collision = true
width = 0.1
height = 20.0
depth = 10.0
material = ExtResource( 14 )

[node name="Wall_2" type="CSGBox" parent="Room 4/Starting_Cage4"]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, -20, 10, 5 )
use_collision = true
width = 0.1
height = 20.0
depth = 50.0
material = ExtResource( 14 )

[node name="Wall_3" type="CSGBox" parent="Room 4/Starting_Cage4"]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, -20, 10, -5 )
use_collision = true
width = 0.1
height = 20.0
depth = 50.0
material = ExtResource( 14 )

[node name="Wall_4" type="CSGBox" parent="Room 4/Starting_Cage4"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 10, 0 )
visible = false
width = 0.1
height = 20.0
depth = 10.0
material = ExtResource( 14 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 5 )
